--- a/research-backend/src/main/resources/application-dev.yml
+++ b/research-backend/src/main/resources/application-dev.yml
@@ -1,5 +1,7 @@
 # 开发环境配置
 spring:
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     url: jdbc:mysql://localhost:3306/research_management?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
     username: root
