后端接口测试完成

--- a/research-backend/pom.xml
+++ b/research-backend/pom.xml
@@ -109,6 +109,11 @@
             <version>${commons-pool2.version}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis</groupId>-->
+<!--            <artifactId>mybatis</artifactId>-->
+<!--        </dependency>-->
+
         <!-- JWT认证 -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
