--- a/research-backend/src/main/resources/application.yml
+++ b/research-backend/src/main/resources/application.yml
@@ -22,9 +22,9 @@ spring:
   # 数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/research_management?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-    username: root
-    password: 123456
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:research_management}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=${DB_SSL:false}&serverTimezone=GMT%2B8
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:}
 
   # 文件上传配置
   servlet:
@@ -34,10 +34,10 @@ spring:
   data:
     # Redis配置
     redis:
-      host: localhost
-      port: 6379
-      password:
-      database: 0
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      password: ${REDIS_PASSWORD:}
+      database: ${REDIS_DATABASE:0}
       timeout: 3000ms
     lettuce:
       pool:
@@ -67,8 +67,8 @@ mybatis-plus:
 #  expiration: 86400000  # 24小时
 
 jwt:
-  secret: "your-very-long-and-secure-secret-key-that-is-at-least-32-characters-long-for-proper-security"
-  expiration: 86400000
+  secret: ${JWT_SECRET}
+  expiration: ${JWT_EXPIRATION:86400000}
 
 
 # 日志配置
